--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ logs/
 
 # Experiments (misspelling included)
 experiments/
+demo_training/experiments/
+feature_training/experiments/
 experiemnts/
 
 # Trained models
