--- a/feature_training/train_config.yaml
+++ b/feature_training/train_config.yaml
@@ -1,10 +1,11 @@
 vehicle_classification:
   class_names: ["background", "nissan", "lexus", "mazda", "benz"]
-  included_classes: ["background" , "nissan","lexus", "mazda" ]
+  included_classes: ["background", "lexus", "mazda" ]
   train_index_file: /home/tkimura4/data/datasets/2025-09-21-ICT/train_index.txt
   val_index_file: /home/tkimura4/data/datasets/2025-09-21-ICT/val_index.txt
 
 max_distance_m: 30
+
 
 # features_to_use: ["total_power", "mean_abs_change", "psd_25hz", "psd_30hz", "psd_40hz"]
 
@@ -19,11 +20,11 @@ training:
   optimizer: adam
   
 model:
-  hidden_layers: [64,32,16]  # Deeper network with more capacity
+  hidden_layers: [64,32,32,16,16]  # Deeper network with more capacity
   dropout_rate: 0.1
   activation: relu
   
 output:
   experiment_dir: experiments
   save_best_only: true
-  monitor: val_accuracy
+  monitor: val_vehicle_recall  # Monitor vehicle recall instead of general recall
